Assigned font-family values for proxima (body) and futura (headers) as sass variables.

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -5,7 +5,7 @@ Typically, if a color is used more than once or twice,
 it should be added here as a variable. Changing the value
 of these variables will affect the colors sitewide. */
 $font-stack-body: "proxima-nova", verdana, sans-serif;
-$font-stack-heading: "proxima-nova", verdana, sans-serif;
+$font-stack-heading: "futura-pt", verdana, sans-serif;
 $cu-red: #98002e;
 $cu-red-rgb-transparent: rgba(168,36,57,0.95);
 // $cu-red2: #830c28; // Old red replaced by $cu-red to keep colors standard
