--- a/app/assets/stylesheets/components/left-nav-ul.scss
+++ b/app/assets/stylesheets/components/left-nav-ul.scss
@@ -94,7 +94,7 @@
 	  background: $white;
 	}
   a {
-    font-family: "proxima-nova", sans-serif;
+    font-family: $font-stack-body;
     display: block;
     padding: 7px 0 0 0;
   }
