--- a/app/assets/stylesheets/components/main_navigation.scss
+++ b/app/assets/stylesheets/components/main_navigation.scss
@@ -262,7 +262,7 @@
         display: block;
         height: 45px;
         font-size: 17px;
-        font-family: 'futura-pt', Sans-Serif;
+        font-family: $font-stack-heading;
         position: relative;
         padding: 0;
       }
