--- a/app/assets/stylesheets/widgets/masthead.scss
+++ b/app/assets/stylesheets/widgets/masthead.scss
@@ -190,7 +190,7 @@
     margin-top: 15px;
   }
   .title {
-    font-family: 'futura-pt', arial, verdana, sans-serif;
+    font-family: $font-stack-heading;
     font-size: 18px;
     font-weight: 600;
     position: relative;
