--- a/app/assets/stylesheets/widgets/primary_column/carousel.scss
+++ b/app/assets/stylesheets/widgets/primary_column/carousel.scss
@@ -145,7 +145,7 @@
       h2 {
         margin-top: 20px;
         margin-top: 1.25rem;
-        font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
+        font-family: $font-stack-body;
         color: $grey;
         font-size: 1.5em;
         line-height: 1.16666666666667;
