--- a/app/assets/stylesheets/widgets/three-box-callout.scss
+++ b/app/assets/stylesheets/widgets/three-box-callout.scss
@@ -37,8 +37,8 @@
       .text {
         text-align: center;
         text-transform: uppercase;
+        font-weight: 600;
         font-size: 14px;
-        font-family: Arial, sans-serif;
         line-height: 1;
         padding: 0px;
       }
