--- a/app/assets/stylesheets/components/cu-companion-bar.scss
+++ b/app/assets/stylesheets/components/cu-companion-bar.scss
@@ -1,5 +1,5 @@
 // #cu_companion_bar {
-// 	font-family: "proxima-nova", verdana, sans-serif;
+// 	font-family: $font-stack-body;
 //   background: #969696;
 //   color: #DDD;
 //   left: 0;
