--- a/app/assets/stylesheets/components/cu-nav.scss
+++ b/app/assets/stylesheets/components/cu-nav.scss
@@ -5,7 +5,7 @@
 //   -webkit-box-sizing: border-box;
 //   -moz-box-sizing: border-box;
 //   box-sizing: border-box;
-//   font-family: "proxima-nova", verdana, sans-serif";
+//   font-family: $font-stack-body;
 //   width: 100%;
 //   height: 45px;
 //   position: fixed;
