--- a/app/assets/stylesheets/components/small-masthead.scss
+++ b/app/assets/stylesheets/components/small-masthead.scss
@@ -22,7 +22,7 @@
 		  }
 		}
 		> div {
-		  font-family: "futura-pt", sans-serif;
+		  font-family: $font-stack-heading;
 		  font-weight: 600px;
 		  font-size: 19px;
 		  color: $white;
