--- a/app/assets/stylesheets/layout_old/phase4_masthead.scss
+++ b/app/assets/stylesheets/layout_old/phase4_masthead.scss
@@ -244,7 +244,7 @@
     margin-top: 15px;
 }
 .miniRotator .title{
-    font-family: 'futura-pt', arial, verdana, sans-serif;
+    font-family: $font-stack-heading;
     font-size: 18px;
     font-weight: 600;
     position: relative;
@@ -466,7 +466,7 @@
     }
 }
 .bigMasthead .masthead-new.quote p{
-    font-family: 'futura-pt', arial, verdana, sans-serif;
+    font-family: $font-stack-heading;
     font-size: 18px !important;
     font-weight: normal;
     line-height: 20px;
@@ -476,7 +476,7 @@
     margin-top: 15px;
     font-size: 21px;
     font-weight: bold;
-    font-family: 'futura-pt', arial, verdana, sans-serif;
+    font-family: $font-stack-heading;
     padding-left: 32px;
 }
  /*
