--- a/app/assets/stylesheets/themes/home.scss
+++ b/app/assets/stylesheets/themes/home.scss
@@ -318,7 +318,7 @@ h1, h2, h3, h4, h5, h6 {
       }
       .subheading {
         font-size: 32px;
-        font-family: "futura-pt", verdana, sans-serif;
+        font-family: $font-stack-heading;
         line-height: 32px;
       }
       &.light-bg {
