--- a/app/assets/stylesheets/widgets/chapman_events_feed.scss
+++ b/app/assets/stylesheets/widgets/chapman_events_feed.scss
@@ -79,8 +79,8 @@ $cef_black: #353430;
 $cef_red: #98002e;
 $cef_gray-slate: #62605a;
 $cef_small_screen: $medium-screen;
-$cef_headings-font: "proxima-nova", verdana, sans-serif;
-$cef_body-font: "proxima-nova", verdana, sans-serif;
+$cef_headings-font: $font-stack-body;
+$cef_body-font: $font-stack-body;
 
 @mixin clearfix() {
   &::after {
