--- a/app/assets/stylesheets/widgets/home_page/graduate_admission.scss
+++ b/app/assets/stylesheets/widgets/home_page/graduate_admission.scss
@@ -35,7 +35,7 @@
     text-align: center;
   }
   p.subheading {
-    font-family: 'proxima-nova', sans-serif;
+    font-family: $font-stack-body;
     font-weight: 800;
     margin-top: 15px;
   }
