--- a/app/assets/stylesheets/widgets/home_page/undergraduate_admission.scss
+++ b/app/assets/stylesheets/widgets/home_page/undergraduate_admission.scss
@@ -23,7 +23,7 @@
       .bigstat {
         font-size: 32px;
         line-height: 32px;
-        font-family: 'futura-pt', sans-serif;
+        font-family: $font-stack-heading;
         color: #FFFFFF;
         margin-top: 0px;
         font-weight: 800;
@@ -31,7 +31,7 @@
       .label {
         font-size: 18px;
         line-height: 18px;
-        font-family: 'futura-pt', sans-serif;
+        font-family: $font-stack-heading;
         color: #FFFFFF;
       }
     }
