--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
@@ -62,6 +62,7 @@
         font-size: 20px;
         text-transform: uppercase;
         vertical-align: middle;
+        padding-right: 32px;
         margin: 0;
       }
     }
