changed stories-feed url back to social production

--- a/app/views/widgets/single_column/_chapman_stories_feed.html
+++ b/app/views/widgets/single_column/_chapman_stories_feed.html
@@ -1,5 +1,5 @@
 <div class="chapman-stories-feed-widget chapman-stories-feed-widget__medium-bg"
-     data-chapman-stories-feed-url="https://blogs.chapman.edu/law/"
+     data-chapman-stories-feed-url=""
      data-chapman-stories-top-story-url=""
      data-chapman-stories-title="Chapman Stories Feed Widget"
      data-chapman-stories-bg-color=""
