--- a/app/views/_cascade/formats/modular/ad_landing/widgets/_masthead_hero.html.erb
+++ b/app/views/_cascade/formats/modular/ad_landing/widgets/_masthead_hero.html.erb
@@ -39,13 +39,13 @@
       -->
       <div class="masthead-header">
         <img class="header-mobile"
-             src="<%= ad_landing.get_child_value(:mobile_logo_src) %>"
-             alt="<%= ad_landing.get_child_value(:mobile_logo_alt) %>"/>
+             src="<%= current_page.get_child_value(:mobile_logo_src) %>"
+             alt="<%= current_page.get_child_value(:mobile_logo_alt) %>"/>
         <div class="header-desktop">
           <img class="header-logo-desktop"
-               src="<%= ad_landing.get_child_value(:desktop_logo_src) %>"
-               alt="<%= ad_landing.get_child_value(:desktop_logo_alt) %>"/>
-          <p class="header-text-desktop"><%= ad_landing.get_child_value(:header_text, true) %></p>
+               src="<%= current_page.get_child_value(:desktop_logo_src) %>"
+               alt="<%= current_page.get_child_value(:desktop_logo_alt) %>"/>
+          <p class="header-text-desktop"><%= current_page.get_child_value(:header_text, true) %></p>
         </div>
       </div>
 
@@ -65,13 +65,13 @@
       -->
       <div class="masthead-hero">
         <div class="background-image"
-             style="background-image: url('<%= ad_landing.get_child_value(:background_image) %>');">
+             style="background-image: url('<%= current_page.get_child_value(:background_image) %>');">
           <div class="outer-background-overlay"></div>
-          <article style="background-image: url('<%= ad_landing.get_child_value(:background_image) %>');">
+          <article style="background-image: url('<%= current_page.get_child_value(:background_image) %>');">
             <div class="inner-background-overlay"></div>
             <div class="content">
-              <h1 class="title"><%= ad_landing.get_child_value(:hero_title) %></h1>
-              <h2 class="subtitle"><%= ad_landing.get_child_value(:hero_subtitle) %></h2>
+              <h1 class="title"><%= current_page.get_child_value(:hero_title) %></h1>
+              <h2 class="subtitle"><%= current_page.get_child_value(:hero_subtitle) %></h2>
             </div>
           </article>
         </div>
@@ -82,17 +82,17 @@
           <!-- CASCADE
           <h2>$_EscapeTool.xml($formTitle)</h2>
           -->
-          <h2><%= ad_landing.get_child_value(:form_title) %></h2>
+          <h2><%= current_page.get_child_value(:form_title) %></h2>
 
           <div class="calls-to-action">
-            <div id="form_<%= ad_landing.get_child_value(:form_id) %>">Loading...</div>
+            <div id="form_<%= current_page.get_child_value(:form_id) %>">Loading...</div>
             <script>/*<![CDATA[*/
               var script = document.createElement('script');
               script.async = 1;
               script.src = 'https://go.chapman.edu/register/' +
-                           '?id=<%= ad_landing.get_child_value(:form_id) %>&' +
+                           '?id=<%= current_page.get_child_value(:form_id) %>&' +
                            'output=embed&' +
-                           'div=form_<%= ad_landing.get_child_value(:form_id) %>' +
+                           'div=form_<%= current_page.get_child_value(:form_id) %>' +
                            ((location.search.length > 1) ? '&' + location.search.substring(1) : '');
               var s = document.getElementsByTagName('script')[0];
               s.parentNode.insertBefore(script, s);
