Adds TODO comment to modular side_panel_hero partial.

--- a/app/views/_cascade/formats/modular/mastheads/_side_panel_hero.erb
+++ b/app/views/_cascade/formats/modular/mastheads/_side_panel_hero.erb
@@ -1,3 +1,6 @@
+<%# TODO: This is static right now. Update to mimic format script in Cascade:
+  # /_cascade/formats/modular/mastheads/side_panel_hero
+  #%>
 <div class="side-panel-hero">
   <div class="hero-content">
     <section class="hero-content-panel">
