Adds comment to hero panel widget explaining video button issue.

--- a/app/views/widgets/home_page/_hero_panel.html
+++ b/app/views/widgets/home_page/_hero_panel.html
@@ -16,7 +16,20 @@
       <div class="actions">
         <a href="#" class="button white smc-cta" id="secondary" data-cta-id="homepage-hero-sample">Read More</a>
         <a href="#" class="button red smc-cta" id="primary" data-cta-id="homepage-hero-sample">Visit HilbertMuseum.org</a>
-        <a href="https://www.youtube.com/watch?v=Rr0XAFbe8b8" class="button smc-cta" id="secondary" data-cta-id="homepage-hero-sample" data-quickview-content="<iframe width=&quot;80%&quot; height=&quot;80%&quot; src=&quot;//www.youtube.com/embed/Rr0XAFbe8b8?rel=0&amp;autoplay=1&quot; frameborder=&quot;0&quot; allowfullscreen></iframe>" title="click to go to YouTube to watch Chapman Fear Survey promo video">Watch Video</a>
+
+        <!-- # Watch Video Button
+             # There's some Javascript that tweaks this and was causing an issue.
+             # See https://github.com/chapmanu/cascade-assets/issues/93
+             # -->
+        <a href="https://www.youtube.com/watch?v=Rr0XAFbe8b8"
+           class="button white smc-cta "
+           id="secondary"
+           data-cta-id="homepage-hero-fear-survey-2016"
+           data-quickview-content="<iframe width=&quot;80%&quot; height=&quot;80%&quot; src=&quot;//www.youtube.com/embed/Rr0XAFbe8b8?rel=0&amp;autoplay=1&quot; frameborder=&quot;0&quot; allowfullscreen></iframe>"
+           title="click to go to YouTube to watch Chapman Fear Survey promo video">
+          Watch Video
+        </a>
+
       </div>
     </div>
     <div id="mastheadGradient"></div>
