Rewrites hero quick viewer. The whole file got diffed because crazy indentation was normalized and Windows line-endings were nuked.

--- a/app/views/widgets/home_page/_hero_panel.html
+++ b/app/views/widgets/home_page/_hero_panel.html
@@ -12,11 +12,10 @@
         <span class="heading uppercase extended">California Scene Painting:</span>
         <span class="subheading lowercase thin">A Narrative Revolution</span>
       </h2>
-      <p class="excerpt">The once overlooked California Scene painting movement gets the recognition it deserves and a new home at the Hilbert Museum of California Art at Chapman University.</p>
-      <div class="actions">
-        <a href="#" class="button white smc-cta" id="secondary" data-cta-id="homepage-hero-sample">Read More</a>
-        <a href="#" class="button red smc-cta" id="primary" data-cta-id="homepage-hero-sample">Visit HilbertMuseum.org</a>
 
+      <p class="excerpt">The once overlooked California Scene painting movement gets the recognition it deserves and a new home at the Hilbert Museum of California Art at Chapman University.</p>
+
+      <div class="actions">
         <!-- # Watch Video Button
              # There's some Javascript that tweaks this and was causing an issue.
              # See https://github.com/chapmanu/cascade-assets/issues/93
@@ -25,14 +24,17 @@
            class="button white smc-cta "
            id="secondary"
            data-cta-id="homepage-hero-fear-survey-2016"
-           data-quickview-content="<iframe width=&quot;80%&quot; height=&quot;80%&quot; src=&quot;//www.youtube.com/embed/Rr0XAFbe8b8?rel=0&amp;autoplay=1&quot; frameborder=&quot;0&quot; allowfullscreen></iframe>"
+           data-quickview-content='<iframe width="80%" height="80%" src="//www.youtube.com/embed/Rr0XAFbe8b8?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>'
            title="click to go to YouTube to watch Chapman Fear Survey promo video">
           Watch Video
         </a>
 
+        <a href="#" class="button red smc-cta" id="primary" data-cta-id="homepage-hero-sample">Visit HilbertMuseum.org</a>
       </div>
     </div>
+
     <div id="mastheadGradient"></div>
+
     <div id="mastheadBackground">
       <video id="mastheadVideo" muted="muted" loop="loop" autoplay="autoplay" style="display:none;"></video>
       <img id="mastheadImage" src="http://www.chapman.edu/_files/img/hero-panels/fallback-images/hilbert-art.jpg" />
