Fixes issue where hero link buttons were not redirecting as expected.

--- a/app/views/widgets/home_page/_hero_panel.html
+++ b/app/views/widgets/home_page/_hero_panel.html
@@ -29,7 +29,7 @@
           Watch Video
         </a>
 
-        <a href="#" class="button red smc-cta" id="primary" data-cta-id="homepage-hero-sample">Visit HilbertMuseum.org</a>
+        <a href="/" class="button red smc-cta" id="primary" data-cta-id="homepage-hero-sample">Visit HilbertMuseum.org</a>
       </div>
     </div>
 
