Adds ContentType controller for law school template.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -20,6 +20,7 @@
 <% @two_column_pages.each do |page| %>
   <li><%= link_to page.titleize, "/two_column/#{page}" %></li>
 <% end %>
+  <li><%= link_to 'Law School ContentType Sample', "/cascade/law" %></li>
 </ul>
 
 <h2>Three Column Sample Pages</h2>
