--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -17,6 +17,7 @@
 
 <h2>Two Column Sample Pages</h2>
 <ul>
+  <li><%= link_to 'Modular Sample', "/modular/two_column" %></li>
 <% @two_column_pages.each do |page| %>
   <li><%= link_to page.titleize, "/two_column/#{page}" %></li>
 <% end %>
