--- a/app/views/_cascade/formats/level/_masthead.erb
+++ b/app/views/_cascade/formats/level/_masthead.erb
@@ -34,7 +34,7 @@ displaySlider = 'TODO'
       <div class="column image">
         <img alt="<%= brandedMastheadAltText %>" src="<%= brandedNewImagePath %>"/>
       </div>
-      <div class="column header">
+      <div class="column header theme-bg-color">
         <h2 class="header"><%= brandedNewHeader %></h2>
       </div>
     </div>
