reorganized masthead css

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -7,6 +7,9 @@
 // Old page layout styles
 @import "layout_old/**/*";
 
+//styles for 
+@import "regions/**/*";
+
 // Styles for officially supported modular widgets
 @import "widgets/**/*";
 
